test/_generated-libs/undici-types/undici_types/errors/UndiciError.hx
package undici_types.errors;

@:jsRequire("undici-types", "errors.UndiciError") extern class UndiciError extends js.lib.Error {
	var code : String;
	static var prototype : UndiciError;
}